[package]
name = "mopro-halo2-rsa"
version = "0.1.0"
edition = "2021"

[lib]
name = "mopro_bindings"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "gen-keys"
path = "src/bin/gen_keys.rs"


[dependencies]
halo2-rsa = { git = "https://github.com/SoraSuegami/halo2-rsa.git" }

mopro-ffi = { git = "https://github.com/ElusAegis/mopro-halo2.git", features = ["halo2"], branch = "feat/halo2-redesign" }
uniffi = "0.28.0"

halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }

num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10.6"

rand = "0.8.5"
rsa = "0.6.1"

serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
thiserror = "^1.0"

[build-dependencies]
mopro-ffi = { git = "https://github.com/ElusAegis/mopro-halo2.git", branch = "feat/halo2-redesign" }
uniffi = { version = "0.28.0", features = ["build"] }

[dev-dependencies]
serde_json = "1.0.120"

[patch."https://github.com/SoraSuegami/halo2-dynamic-sha256.git"]
halo2-dynamic-sha256 = { git = "https://github.com/SoraSuegami//halo2-dynamic-sha256.git", version = "0.1.0", rev = "46dc9c31ca0678bd4d047b54a2944ff2b3594f65"}
